# open-provider

./: Cargo.toml  open-provider.db  open-provider.toml
src/: config.rs  db.rs  main.rs  providers.rs  routes.rs
templates/: dashboard.html
