[package]
name = "open-provider"
version = "0.1.0"
edition = "2021"
description = "Monitor AI provider model catalogs — health checks, availability, response times"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
askama = "0.13"
tokio-cron-scheduler = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
toml = "0.8"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
